minor fixes requird for phonegap - paths cannot contain underscores, apparently!

--- a/css/custom.css
+++ b/css/custom.css
@@ -183,8 +183,8 @@ p
 {
 	background: url(../img/logo.png) no-repeat center top;
 	
-	background-size: 320px 130px;
-	-webkit-background-size: 320px 130px;
+	background-size: 250px 102px;
+	-webkit-background-size: 250px 102px;
 	
 	margin-top: 10px;
 	padding-top: 131px;
